--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "tfk-saksbehandling-elev-varsel-templates",
-  "version": "4.0.1",
+  "version": "4.0.2",
   "description": "Templates for the tfk-saksbehandling-elev-varsel ecosystem",
   "license": "MIT",
   "author": {
@@ -10,7 +10,7 @@
   },
   "main": "index.js",
   "engines": {
-    "node": ">=4.3.1"
+    "node": ">=4.5.0"
   },
   "scripts": {
     "test": "standard && tap --reporter=spec test/*.js",
@@ -33,8 +33,8 @@
     "url": "http://github.com/telemark/tfk-saksbehandling-elev-varsel-templates/issues"
   },
   "devDependencies": {
-    "coveralls": "^2.11.6",
-    "standard": "^6.0.4",
-    "tap": "^5.4.3"
+    "coveralls": "2.11.6",
+    "standard": "6.0.4",
+    "tap": "5.4.3"
   }
 }
