--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "tfk-saksbehandling-elev-varsel-templates",
-  "version": "4.0.2",
+  "version": "5.0.0",
   "description": "Templates for the tfk-saksbehandling-elev-varsel ecosystem",
   "license": "MIT",
   "author": {
@@ -13,7 +13,7 @@
     "node": ">=4.5.0"
   },
   "scripts": {
-    "test": "standard && tap --reporter=spec test/*.js",
+    "test": "standard && nsp check && tap --reporter=spec test/*.js",
     "coverage": "tap test/*.js --coverage",
     "coveralls": "tap --cov --coverage-report=lcov test/*.js && cat coverage/lcov.info | coveralls",
     "setup": "npm install && node setup.js"
@@ -34,6 +34,7 @@
   },
   "devDependencies": {
     "coveralls": "2.11.12",
+    "nsp": "2.6.1",
     "standard": "7.1.2",
     "tap": "6.3.2"
   }
