--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "node": ">=10.15.1"
   },
   "scripts": {
-    "test": "standard && nsp check && tap --reporter=spec test/**/*.js",
+    "test": "standard && npm audit && tap --reporter=spec test/**/*.js",
     "coverage": "tap test/**/*.js --coverage",
     "coveralls": "tap --cov --coverage-report=lcov test/**/*.js && cat coverage/lcov.info | coveralls",
     "setup": "npm install"
@@ -35,7 +35,6 @@
   "homepage": "https://github.com/telemark/tfk-saksbehandling-elev-varsel-templates",
   "devDependencies": {
     "coveralls": "3.0.2",
-    "nsp": "3.2.1",
     "standard": "12.0.1",
     "tap": "12.5.1"
   }
